Updates from Overleaf

--- a/VTthesis.bib
+++ b/VTthesis.bib
@@ -6204,3 +6204,67 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2011AIPC.1357..269T},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@INPROCEEDINGS{2019BAAS...51g.245M,
+       author = {{McEnery}, Julie and {van der Horst}, Alexander and {Dominguez}, Alberto and {Moiseev}, Alexander and {Marcowith}, Alexandre and {Harding}, Alice and {Lien}, Amy and {Giuliani}, Andrea and {Inglis}, Andrew and {Ansoldi}, Stefano and {Stamerra}, Antonio and {Manousakis}, Antonios and {Strong}, Andy and {Bambi}, Cosimo and {Patricelli}, Barbara and {Baring}, Matthew and {Barrio}, Juan Abel and {Bastieri}, Denis and {Fields}, Brian and {Beacom}, John and {Beckmann}, Volker and {Bednarek}, Wlodek and {Rani}, Bindu and {Boggs}, Steven and {Bolotnikov}, Aleksey and {Cenko}, S. Brad and {Buckley}, Jim and {Grefenstette}, Brian and {Hui}, Michelle and {Pittori}, Carlotta and {Prescod-Weinstein}, Chanda and {Shrader}, Chris and {Gouiffes}, Christian and {Kierans}, Carolyn and {Wilson-Hodge}, Colleen and {D'Ammando}, Filippo and {Castro}, Daniel and {Kocveski}, Daniel and {Gasparrini}, Dario and {Thompson}, David and {Williams}, David and {De Angelis}, Alessandro and {Bernard}, Denis and {Digel}, Seth and {Morcuende}, Daniel and {Charles}, Eric and {Bissaldi}, Elisabetta and {Hays}, Elizabeth and {Ferrara}, Elizabeth and {Bozzo}, Enrico and {Grove}, Eric and {Wulf}, Eric and {Bottacini}, Eugenio and {Caroli}, Ezio and {Kislat}, Fabian and {Oikonomou}, Foteini and {Giordano}, Francesco and {Longo}, Francesco and {Fryer}, Chris and {Fukazawa}, Yasushi and {Georganopoulos}, Markos and {De Nolfo}, Georgia and {Vianello}, Giacomo and {Kanbach}, Gottfried and {Younes}, George and {Blumer}, Harsha and {Hartmann}, Dieter and {Hernanz}, Margarita and {Takahashi}, Hiromitsu and {Li}, Hui and {Agudo}, Ivan and {Moskalenko}, Igor and {Stumke}, Inga and {Grenier}, Isabelle and {Smith}, Jacob and {Rodi}, James and {Perkins}, Jeremy and {Gelfand}, Joseph and {Holder}, Jamie and {Knodlseder}, Jurgen and {Kopp}, Joachim and {Lenain}, Jean-Philippe and {{\'A}lvarez}, Jos{\'e}-Manuel and {Metcalfe}, Jessica and {Krizmanic}, John and {Stephen}, John B. and {Hewitt}, Jack and {Mitchell}, John and {Harding}, Pat and {Tomsick}, John and {Racusin}, Judith and {Finke}, Justin and {Kargaltsev}, Oleg and {Klimenko}, Alexei V. and {Krawczynski}, Henric and {Smith}, Karl and {Kubo}, Hidetoshi and {Di Venere}, Leonardo and {Marcotulli}, Lea and {Lommler}, Jan and {Parker}, Lucas and {Baldini}, Luca and {Foffano}, Luca and {Zampieri}, Luca and {Tibaldo}, Luigi and {Petropoulou}, Maria and {Ajello}, Marco and {Meyer}, Manuel and {L{\'o}pez}, Marcos and {McConnell}, Marc and {Boettcher}, Markus and {Cardillo}, Martina and {Martinez}, Manel and {Kerr}, Matthew and {Mazziotta}, M. Nicola and {McEnery}, Julie and {Di Mauro}, Mattia and {Wood}, Matthew and {Meyer}, Eileen and {Briggs}, Michael and {De Becker}, Micha{\"e}l and {Lovellette}, Michael and {Doro}, Michele and {Sanchez-Conde}, Miguel A. and {Moss}, Michael and {Mizuno}, Tsunefumi and {Rib{\'o}}, Marc and {Nakazawa}, Kazuhiro and {Neilson}, Naoko Kurahashi and {Auricchio}, Natalia and {Omodei}, Nicola and {Oberlack}, Uwe and {Ohno}, Masanori and {Orlando}, Elena and {Otte}, Nepomuk and {Coppi}, Paolo and {Bloser}, Peter and {Zhang}, Haocheng and {Laurent}, Philippe and {Pohl}, Martin and {Prandini}, Elisa and {Shawhan}, Peter and {Caputo}, Regina and {Campana}, Riccardo and {Rando}, Riccardo and {Woolf}, Richard and {Johnson}, Robert and {Mignani}, Roberto and {Walter}, Roland and {Ojha}, Roopesh and {da Silva}, Rui Curado and {Dietrich}, Stefano and {Funk}, Stefan and {Zane}, Silvia and {Anton}, Sonia and {Buson}, Sara and {Cutini}, Sara and {Saz Parkinson}, Pablo and {Schirato}, Richard and {Griffin}, Sean and {Kaufmann}, S. and {Stawarz}, Lukasz and {Ciprini}, Stefano and {Del Sordo}, Stefano and {Jones}, Sam and {Guiriec}, Sylvain and {Tajima}, Hiro and {Cheung}, Teddy and {The}, Lih-Sin and {Venters}, Tonia and {Porter}, Troy and {Linden}, Tim and {Barres}, Ulisses and {Paliya}, Vaidehi S. and {Bozhilov}, Vladimir and {Vestrand}, Tom and {Tatischeff}, Vincent and {Chen}, Wenlei and {Wang}, Xilu and {Tanaka}, Yasuyuki and {Uhm}, Lucas and {Zhang}, Bing and {Zimmer}, Stephan and {Zoglauer}, Andreas and {Wadiasingh}, Zorawar},
+        title = "{All-sky Medium Energy Gamma-ray Observatory: Exploring the Extreme Multimessenger Universe}",
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+    booktitle = {Bulletin of the American Astronomical Society},
+         year = 2019,
+       volume = {51},
+        month = sep,
+          eid = {245},
+        pages = {245},
+archivePrefix = {arXiv},
+       eprint = {1907.07558},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019BAAS...51g.245M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2017ExA....44...25D,
+       author = {{De Angelis}, A. and {Tatischeff}, V. and {Tavani}, M. and {Oberlack}, U. and {Grenier}, I. and {Hanlon}, L. and {Walter}, R. and {Argan}, A. and {von Ballmoos}, P. and {Bulgarelli}, A. and {Donnarumma}, I. and {Hernanz}, M. and {Kuvvetli}, I. and {Pearce}, M. and {Zdziarski}, A. and {Aboudan}, A. and {Ajello}, M. and {Ambrosi}, G. and {Bernard}, D. and {Bernardini}, E. and {Bonvicini}, V. and {Brogna}, A. and {Branchesi}, M. and {Budtz-Jorgensen}, C. and {Bykov}, A. and {Campana}, R. and {Cardillo}, M. and {Coppi}, P. and {De Martino}, D. and {Diehl}, R. and {Doro}, M. and {Fioretti}, V. and {Funk}, S. and {Ghisellini}, G. and {Grove}, E. and {Hamadache}, C. and {Hartmann}, D.~H. and {Hayashida}, M. and {Isern}, J. and {Kanbach}, G. and {Kiener}, J. and {Kn{\"o}dlseder}, J. and {Labanti}, C. and {Laurent}, P. and {Limousin}, O. and {Longo}, F. and {Mannheim}, K. and {Marisaldi}, M. and {Martinez}, M. and {Mazziotta}, M.~N. and {McEnery}, J. and {Mereghetti}, S. and {Minervini}, G. and {Moiseev}, A. and {Morselli}, A. and {Nakazawa}, K. and {Orleanski}, P. and {Paredes}, J.~M. and {Patricelli}, B. and {Peyr{\'e}}, J. and {Piano}, G. and {Pohl}, M. and {Ramarijaona}, H. and {Rando}, R. and {Reichardt}, I. and {Roncadelli}, M. and {Silva}, R. and {Tavecchio}, F. and {Thompson}, D.~J. and {Turolla}, R. and {Ulyanov}, A. and {Vacchi}, A. and {Wu}, X. and {Zoglauer}, A.},
+        title = "{The e-ASTROGAM mission. Exploring the extreme Universe with gamma rays in the MeV - GeV range}",
+      journal = {Experimental Astronomy},
+     keywords = {High-Energy Gamma-Ray Astronomy, High-Energy Astrophysics, Nuclear Astrophysics, Compton and Pair Creation Telescope, Gamma-Ray Bursts, Active Galactic Nuclei, Jets, Outflows, Multiwavelength Observations of the Universe, Counterparts of gravitational waves, Fermi, Dark Matter, Nucleosynthesis, Early Universe, Supernovae, Cosmic Rays, Cosmic Antimatter., Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Solar and Stellar Astrophysics, Nuclear Experiment},
+         year = 2017,
+        month = oct,
+       volume = {44},
+       number = {1},
+        pages = {25-82},
+          doi = {10.1007/s10686-017-9533-6},
+archivePrefix = {arXiv},
+       eprint = {1611.02232},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ExA....44...25D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1982Natur.300..728A,
+       author = {{Alpar}, M.~A. and {Cheng}, A.~F. and {Ruderman}, M.~A. and {Shaham}, J.},
+        title = "{A new class of radio pulsars}",
+      journal = {\nat},
+     keywords = {Pulsars, Radio Astronomy, Accretion Disks, Binary Stars, Gamma Rays, Stellar Mass Accretion, X Rays, Astrophysics},
+         year = 1982,
+        month = dec,
+       volume = {300},
+       number = {5894},
+        pages = {728-730},
+          doi = {10.1038/300728a0},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1982Natur.300..728A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1998Natur.394..344W,
+       author = {{Wijnands}, Rudy and {van der Klis}, Michiel},
+        title = "{A millisecond pulsar in an X-ray binary system}",
+      journal = {\nat},
+         year = 1998,
+        month = jul,
+       volume = {394},
+       number = {6691},
+        pages = {344-346},
+          doi = {10.1038/28557},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1998Natur.394..344W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
