--- a/VTthesis.tex
+++ b/VTthesis.tex
@@ -73,16 +73,17 @@
 % The dedication and acknowledgement pages are optional. Comment them out to remove them.
 % \dedication{This is where you put your dedications.}
 \acknowledge{
-First, I thank my PhD advisor Shunsaku Horiuchi. I thank my committee members Giti Khodaparast, John Simonetti, and Tatsu Takeuchi for encouraging me.
+I would first like to thank my supervisor, Dr. Shunsaku Horiuchi, for his continuous advice and support during my Ph.D. He has taught me how to become an independent researcher by sharing not only immense knowledge but also invaluable experiences. I am also profoundly grateful to the committee members, Dr. Giti Khodaparast, Dr. John Simonetti, and Dr. Tatsu Takeuchi. They have been encouraging and supportive and guided every step of mine to the completeness of this dissertation.
 \\
-I would like to thank my collaborators. They are Shin'ichiro Ando, Francesca Calore, Roland M. Crocker, Ian Holst, Dan Hooper, Shunsaku Horiuchi, 
-Gordan Krnjaic, Harm van Leijen, Oscar Macias, Varun Mathur, Djordje Minic, David M. Nataf, Fiona H. Panther, Ian Shoemaker, Thomas Siegert, Tatsu Takeuchi, and Natalia Tapia Arellano. It has been delightful to work with you in the past years.
+I would like to thank my collaborators. They are Dr. Shin'ichiro Ando, Dr. Francesca Calore, Dr. Roland M. Crocker, Ian Holst, Dr. Dan Hooper, Dr. Shunsaku Horiuchi, Dr. Gordan Krnjaic, Harm van Leijen, Dr. Oscar Macias, Varun Mathur, Dr. Djordje Minic, Dr. David M. Nataf, Dr. Fiona H. Panther, Dr. Ian Shoemaker, Dr. Thomas Siegert, Dr. Tatsu Takeuchi, and Dr. Natalia Tapia Arellano. It has been delightful to work with you in the past years. I have enjoyed the discussions we had, and I have learned a tremendous amount of physics from you.
 \\
-I wish to especially thank Oscar Macias for being a long-term collaborator and friend. Thank you for sharing your experiences that helped me development. I thank Shin'ichiro Ando for hosting my visit to GRAPPA, Amsterdam. I thank Dan Hooper for hosting my visit at Fermilab, where this thesis is finished.
+I wish to especially thank Dr. Oscar Macias for being a long-term collaborator and friend. Thank you for sharing your experiences that showed me the path for a young researcher. Thanks should also go to Dr. Shin'ichiro Ando and Dr. Oscar Macias for hosting my visit to Amsterdam, where I spent delightful two weeks. 
 \\
-I thank the fellow graduate students I met at Virginia Tech: Hao Zou, Zijian Jiang, Kuangyin Deng, Ruslan Mukhamadiarov, Tommy Lam, Varun Mathur,   Joseph Camilleri, Vivek Sharma. I thank you for the final exames we went through and the fun we had together.
+I would like to extend my sincere thanks to Dr. Dan Hooper for hosting my visit at Fermilab, where this dissertation is completed.
 \\
-Last but not the least, I thank my families for their unconditional support.
+I very much appreciate the many fellow graduate students I met at Virginia Tech: Joseph Camilleri, Kuangyin Deng, Tommy Lam, Varun Mathur, Ruslan Mukhamadiarov, Zijian Jiang, Vivek Sharma, and Hao Zou. I thank you for the final exams we went through and the fun we had together.
+\\
+Last but not least, I thank my family for their unconditional love and support, without which this dissertation will never be finished.
 }
 
 % The abstract is required.
@@ -330,11 +331,11 @@ The AMS-02 experiment has been measuring various species of cosmic rays arriving
 
 \chapter{Galactic center excess} \label{ch:GCE}
 
-The \emph{Fermi} Large Area Telescope has discovered a gamma-ray excess toward the center of Milky Way. The signal, often referred as the Galactic center excess (GCE), was first identified by \citet{2009arXiv0910.2998G}, and further confirmed by many collaborations~\cite{2009arXiv0912.3828V,2011PhLB..697..412H,2012PhRvD..86h3511A,2013PhRvD..88h3521G,2014PhRvD..89f3515M,2013PDU.....2..118H,2014PhRvD..90b3526A,2016PDU....12....1D,2015JCAP...03..038C,2015PhRvD..91l3010Z,2016ApJ...819...44A,2017ApJ...840...43A}. In this chapter, we review the possible interpretations of the signal, including the dark matter scenario and the millisecond pulsar scenario. We show that understanding the morphology of the GCE is crucial for disentangling the millisecond pulsar signal from the dark matter signal.
+The \emph{Fermi} Large Area Telescope has discovered a gamma-ray excess toward the center of the Milky Way. The signal, often referred as the Galactic center excess (GCE), was first identified by \citet{2009arXiv0910.2998G}, and further confirmed by many collaborations~\cite{2009arXiv0912.3828V,2011PhLB..697..412H,2012PhRvD..86h3511A,2013PhRvD..88h3521G,2014PhRvD..89f3515M,2013PDU.....2..118H,2014PhRvD..90b3526A,2016PDU....12....1D,2015JCAP...03..038C,2015PhRvD..91l3010Z,2016ApJ...819...44A,2017ApJ...840...43A}. In this chapter, we review the possible interpretations of the signal, including the dark matter scenario and the millisecond pulsar scenario. We show that understanding the morphology of the GCE is crucial for disentangling the millisecond pulsar signal from the dark matter signal.
 
 \section{\textit{Fermi}-LAT}
 
-The \textit{Fermi}-LAT satellite was launched by NASA on 2008, June 11. It is a pair-conversion gamma-ray telescope, covering the energy range from around 20 MeV to above 300 GeV. Figure~\ref{fig:lat}~\cite{2009ApJ...697.1071A} shows the schematic diagram of the LAT. An incoming gamma ray would interact with the tungsten layers in the detector, creating a pair of electron and positron. The trajectories of the pair particles are tracked by the silicon strips, allowing the LAT to recover the direction of the gamma ray. The calorimeter at the bottom of the detector stops the electron and positron, so that it measures the total energy of the gamma ray.
+The \textit{Fermi}-LAT satellite was launched by NASA on 2008 June 11. It is a pair-conversion gamma-ray telescope, covering the energy range from around 20 MeV to above 300 GeV. Figure~\ref{fig:lat}~\cite{2009ApJ...697.1071A} shows the schematic diagram of the LAT. An incoming gamma ray would interact with the tungsten layers in the detector, creating a pair of electron and positron. The trajectories of the pair particles are tracked by the silicon strips, allowing the LAT to recover the direction of the gamma ray. The calorimeter at the bottom of the detector stops the electron and positron to measure the total energy of the gamma ray.
 
 As a wide field-of-view telescope, the LAT covers about 20\% of the sky at each moment. The spacecraft orbits the earth in about 96 minutes, allowing the LAT to survey the entire sky efficiently. The angular resolution of the LAT varies with the gamma-ray energy, from about 3.5$^\circ$ at 100 MeV and 0.15$^\circ$ at above 10 GeV.
 
@@ -347,7 +348,7 @@ As a wide field-of-view telescope, the LAT covers about 20\% of the sky at each 
 
 \section{Gamma-ray sky and the GCE}
 
-Since its mission began, The \textit{Fermi}-LAT has discovered thousands of gamma-ray sources and revealed the large scale diffuse gamma-ray emission in the sky. Figure~\ref{fig:gamma_sky} shows the gamma-ray sky constructed by 5-year Fermi data above 1 GeV. Most remarkably, the Galactic diffuse emission dominates the central plane of the Milky Way.
+Since its mission began, The \textit{Fermi}-LAT has discovered thousands of gamma-ray sources and revealed the large-scale diffuse gamma-ray emission in the sky. Figure~\ref{fig:gamma_sky} shows the gamma-ray sky constructed by 5-year Fermi data above 1 GeV. Most remarkably, the Galactic diffuse emission dominates the central plane of the Milky Way.
 
 \begin{figure}[htb]
     \centering
@@ -357,13 +358,13 @@ Since its mission began, The \textit{Fermi}-LAT has discovered thousands of gamm
 \end{figure}
 % https://svs.gsfc.nasa.gov/11342
 
-As mentioned in Sec.~\ref{sse:indirect}, one of the most interesting regions for searching dark matter annihilation is the Galactic center. However, the rich diffuse emission in the Galactic center plays as an important background for any exotic gamma-ray signal from the same region. The template fitting technique has been developed as a standard analysis method for \textit{Fermi}-LAT data to improve the instrumental sensitivity to detect those signals. By knowing the maps of different background emissions and the expected signal in the region of interest, one can fit the data to the linear combinations of different maps (templates) and potentially detect signals below the background emission.
+As mentioned in Sec.~\ref{sse:indirect}, one of the most exciting regions for searching dark matter annihilation is the Galactic center. However, the rich diffuse emission in the Galactic center represents an essential background for any exotic gamma-ray signal from the same region. Luckily, the template fitting technique has been developed as a standard analysis method for \textit{Fermi}-LAT data to improve the instrumental sensitivity to detect those signals. By knowing the maps of different background emissions and the expected signal in the region of interest, one can fit the data to the linear combinations of different maps (templates) and potentially detect signals below the background emission.
 
-The Galactic diffuse emission that dominated the Galactic plane is generated by cosmic rays interacting with the  interstellar medium (gas and radiation field in the Galaxy). There are three physical processes that contributes to the Galactic diffuse emission: the  bremsstrahlung of cosmic-ray electrons with the interstellar gas; the pion production from cosmic-ray protons colliding the interstellar gas; the inverse Compton scattering of cosmic-ray electrons off the interstellar radiation field. The first two processes trace the gas maps of the Milky Way, which can be measured by the spectral line surveys of HI and CO gas. The inverse Compton scattering is determined by the cosmic-ray electrons propagation and their interaction with the interstellar radiation field (including the CMB, inferred, and starlight photons), which can be calculated with \textsc{galprop}~\cite{2017ApJ...846...67P}.
+The Galactic diffuse emission that dominated the Galactic plane is generated by cosmic rays interacting with the interstellar medium (gas and radiation field in the Galaxy). Three physical processes contribute to the Galactic diffuse emission: the bremsstrahlung of cosmic-ray electrons with the interstellar gas; the pion production from cosmic-ray protons colliding the interstellar gas; the inverse Compton scattering of cosmic-ray electrons off the interstellar radiation field. The first two processes trace the gas maps of the Milky Way, which can be measured by the spectral line surveys of HI and CO gas. The cosmic-ray electrons propagation and interaction with the interstellar radiation field (including the CMB, inferred, and starlight photons) determine the inverse Compton scattering, which can be calculated with \textsc{galprop}~\cite{2017ApJ...846...67P}.
 
 The expected gamma-ray signal from dark matter annihilation is spherically symmetric and peaks at the Galactic center, as implied by the NFW profile of dark matter.
 
-The photon counts detected by the \textit{Fermi}-LAT from each pixel on the sky map over certain energy bin $\Delta E$ can be treated independently, therefore the likelihood function is Poissonian,
+The photon counts detected by the \textit{Fermi}-LAT from each pixel on the sky map over a particular energy bin $\Delta E$ can be treated independently. Therefore the likelihood function is Poissonian,
 \begin{equation}
     \mathcal{L}(\mu|n)= \sum_{ij}\frac{\mu_{ij}^{n_{ij}}e^{(-\mu_{ij})}}{n_{ij}!},
 \end{equation}
@@ -383,7 +384,7 @@ Including the NFW profile for dark matter in the fit, a gamma-ray excess has bee
 
 \subsection{Dark matter interpretation}
 
-It has been shown that WIMP dark matter annihilation can explain the unique feature of the peaked GCE spectrum. 
+WIMP dark matter annihilation can explain the unique feature of the peaked GCE spectrum. 
 %The implied $\sigmav$ of the GCE, after normalizing the NFW profile with local dark matter density, is consistent with the thermal relic cross section. 
 The gamma-ray flux from dark matter annihilation, as described by Eq.~\ref{eq:ann}, is
 \begin{equation}
@@ -391,7 +392,7 @@ The gamma-ray flux from dark matter annihilation, as described by Eq.~\ref{eq:an
 \end{equation}
 The $dN_\gamma/dE_\gamma$ is the gamma-ray spectrum per dark matter annihilation and depends on the dark matter mass and annihilation final states. To produce a peaked spectrum at a few GeV, the dark matter mass varies from 30 GeV to 60 GeV~\cite{2011PhRvD..84l3005H, 2012PhRvD..86h3511A,2013PhRvD..88h3521G,2016PDU....12....1D,2015JCAP...03..038C}. Multiple annihilation channels can explain the data, including the lepton channels (e.g., $\chi\chi\to\tau^+\tau^-$), the quark channels (e.g., $\chi\chi\to b\bar{b}$), and the mixing of them~\cite{2011PhRvD..84l3005H, 2012PhRvD..86h3511A,2013PhRvD..88h3521G,2016PDU....12....1D,2015JCAP...03..038C}. Knowing the mass and annihilation spectrum of dark matter, we can infer the annihilation cross section $\sigmav$. The estimated values is around $1 - 5 \times 10^{-26}\ \mathrm{cm}^3\  \mathrm{s}^{-1}$, which are consistent with the thermal relic cross section discussed in Sec.~\ref{se:wimp}.
 
-In general, the dark matter interpretation has been proved highly promising and has been popular since the discovery of the GCE.
+In general, the dark matter interpretation has been proved highly assuring and has been popular since the discovery of the GCE.
 
 
 % \section{Dark matter interpretation}
@@ -407,15 +408,15 @@ In general, the dark matter interpretation has been proved highly promising and 
 
 \section{Millisecond pulsar interpretation}
 
-Although a dark matter annihilation signal is in general consistent with the GCE,  astrophysical sources can also explain the observed spectrum and intensity. A population of unresolved millisecond pulsars in the Galactic bulge is the most promising candidate.
+Although a dark matter annihilation signal is consistent with the GCE,  astrophysical sources may also explain the observed spectrum and intensity. A population of unresolved millisecond pulsars in the Galactic bulge is the most promising candidate.
 
 \subsection{Formation of millisecond pulsars}
 
-Massive stars with an initial mass range $\sim 9.5 - 25\ M_\odot$ can form neutron stars after electron-capture or core collapse supernova explosion~\cite{2014PASA...31...30K}. Neutron stars are detected as pulsars since their radio signals are pulsed. This is due to the lighthouse effect of the emission beam of the rotating neutron stars~\cite{2004hpa..book.....L}.
+Massive stars with an initial mass range $\sim 9.5 - 25\ M_\odot$ can form neutron stars after electron-capture or core-collapse supernova explosions~\cite{2014PASA...31...30K}. Neutron stars are detected as pulsars since their radio signals are pulsed. This is due to the lighthouse effect of the emission beam of the rotating neutron stars~\cite{2004hpa..book.....L}.
 
-Two of the most important timing measurements of pulsars are their spin period $P$ and the spin-down rate $\dot{P}$. Those measurements are usually shown on the $P-\dot{P}$ diagram (for an example, see Fig.~\ref{fig:pp}~\cite{2011AIPC.1357..269T,2005AJ....129.1993M}), which provides unique insights into the evolution of pulsars. Two distinguishing population of pulsars can be identified from the $P-\dot{P}$ diagram: the majority of ``normal'' pulsars with $P \sim 1$ s and $\dot{P} \sim\ 10^{-15}$ s s$^-1$ and the millisecond pulsars  with $P \sim 3$ ms and $\dot{P} \sim\ 10^{-20}$ s s$^-1$ in the lower left part of the diagram.
+Two of the most important timing measurements of pulsars are their spin period $P$ and the spin-down rate $\dot{P}$. Those measurements are usually shown on the $P-\dot{P}$ diagram (for an example, see Fig.~\ref{fig:pp}~\cite{2011AIPC.1357..269T,2005AJ....129.1993M}), which provides unique insights into the evolution of pulsars. Two distinguishing classes of pulsars can be identified from the $P-\dot{P}$ diagram: the majority of ``normal'' pulsars with $P \sim 1$ s and $\dot{P} \sim\ 10^{-15}$ s s$^{-1}$ and the millisecond pulsars  with $P \sim 1$ ms and $\dot{P} \sim\ 10^{-20}$ s s$^{-1}$ in the lower left part of the diagram.
 
-The very low $\dot{P}$ of millisecond pulsars implies that they are old pulsars with magnetic field $\sim$ 3 orders of magnitude lower than those young pulsars.
+The very low $\dot{P}$'s of millisecond pulsars suggest that they are old pulsars with magnetic field $\sim$ three orders of magnitude lower than those young pulsars. The fast rotation ($P \sim 1$ ms) of millisecond pulsars can be explained by the recycling model: normal pulsars, after losing most of their magnetic field, could be spun up by the accretion of matter from their companion stars in the binary system~\cite{1982Natur.300..728A,1998Natur.394..344W}. The recycling model also explains the observation that millisecond pulsars are usually found in binary systems.
 
 \begin{figure}[htb]
     \centering
@@ -424,9 +425,19 @@ The very low $\dot{P}$ of millisecond pulsars implies that they are old pulsars 
     \label{fig:pp}
 \end{figure}
 
-\subsection{High-energy emission}
+\subsubsection{Millisecond pulsars in globular clusters}
 
-\subsection{Population in the Galactic bulge}
+The recycling model is confirmed by the large number of millisecond pulsars in globular clusters. About 40\% of millisecond pulsars are discovered in globular clusters, even though globular clusters only make up $\sim$ 0.05\% of the total number of stars in the Milky Way~\cite{2019ApJ...877..122Y}. This means that the role of dynamic formation of millisecond pulsars in globular clusters is overwhelming. We discuss this in more detail in Chapter~\ref{ch:globular_cluster}.
+
+\subsection{Millisecond pulsars in gamma rays}
+
+Millisecond pulsars have been firmly established as gamma-ray sources~\citep{1996A&A...311L...9V,2009ApJ...699.1171A,2013MNRAS.430..571E,2013ApJS..208...17A}. The gamma-ray emission is closely tied to the outer magnetosphere of millisecond pulsars~\cite{2021arXiv210105751H}. In the energy range of \textit{Fermi}-LAT, the gamma-ray spectrum of millisecond pulsars should be dominated by curvature radiation~\cite{2013ApJS..208...17A}, which is caused by the $e^\pm$ losing energy along the curved magnetic field lines. The curvature radiation spectrum is hard, up to a
+cutoff energy around a few GeV~\cite{2005ApJ...622..531H}.
+
+The observed gamma-ray spectra of millisecond pulsars are, within uncertainties, consistent with the spectrum of the GCE~\cite{2011JCAP...03..010A}. Therefore, a large number of millisecond pulsars that are individually unresolved by \textit{Fermi}-LAT could originate the spectrum of the GCE. The old stellar population in the Galactic bulge will be able to host enough faint millisecond pulsars to explain the observed intensity of the GCE~\cite{2018ApJ...863..199G,2020JCAP...12..035P}.
+
+It has been believed that the millisecond pulsar distribution in the inner Galaxy is compatible with the squared NFW profile based on the observation of low-mass X-ray binaries in M31~\cite{2012PhRvD..86h3511A}. However, \citet{2013PhRvD..88h3009H} argued that millisecond pulsar distribution is concentrated in the Galactic bulge and disk, therefore cannot explain the extended emission of the GCE. Nevertheless, the spatial morphology of the GCE is derived from the data and depends on the models of the Galactic diffuse emission. Furthermore, recent reanalyses have demonstrated that the GCE is better described by the old stellar distribution of the Galactic bulge than by the NFW profile expected for the dark matter annihilation, which we discuss in the following sections.
+%\subsection{Population in the Galactic bulge}
 
 
 
@@ -435,7 +446,7 @@ The very low $\dot{P}$ of millisecond pulsars implies that they are old pulsars 
 
 \section{Stellar mass distribution in the Galactic bulge}\label{se:bulge_model}
 
-The stellar mass distribution in the inner Galaxy is unique and complicated. It shares few feature with the dark matter distribution (the NFW profile), which is spherically symmetric. The morphology of the GCE provide a viable probe for the origin of the excess.
+The stellar mass distribution in the inner Galaxy is unique and complicated. It shares few features with the dark matter distribution (the NFW profile), which is spherically symmetric.
 
 \subsection{Boxy Bulge}
 
@@ -526,7 +537,11 @@ with best-fit power-law indices $n = 2.0$ for $R \leq 6$ pc and $n = 3.0$ for $R
 \end{equation}
 The scale densities $\rho_0$, $\rho_1$, and $\rho_2$ ensure the continuity of the NSD density function. The density variation along the $z$ direction is given by an exponential cutoff with a scale height 45 $\pm$ 5 pc. The stellar mass of the entire NSD is (1.4 $\pm$ 0.6) $\times$ 10$^9$ $M_\odot$.
 
-\section{Morphology of the GCE}
+\section{Spatial morphology of the GCE}
+
+The spatial morphology of the GCE is uncertain since it is impossible to model the Galactic diffuse model perfectly. The NFW profile has been widely used in the template fitting regarding the GCE since it is compatible with the dark matter annihilation as well as the low-mass X-ray binary profile in M31~\cite{2012PhRvD..86h3511A}. The previous section shows that the stellar distribution of the boxy bulge and nuclear bulge in the inner Galaxy is different from the NFW profile. As part of the old stellar population, the millisecond pulsar distribution should trace the boxy and nuclear bulge. This critical difference between the spatial morphology of the millisecond pulsar and dark matter could help us unravel the origin of the GCE.
+
+Recent reanalyses for the morphology of the GCE have considered this possibility ~\citep{2018NatAs...2..387M,2018NatAs...2..819B,2019JCAP...09..042M, 2020PhRvD.102d3012A}. \citet{2018NatAs...2..387M} considered the hydro-dynamical model of the interstellar gas to better model the Galactic diffuse emission. Then, they find evidence that the GCE is statistically non-spherical. Namely, its morphology is better described by the stellar mass distribution in the Galactic bulge and the nuclear bulge of the inner Galaxy. \citet{2018NatAs...2..819B} combined the template-fitting techniques with image reconstruction and arrived at similar conclusions.
 
 
 
@@ -3332,19 +3347,19 @@ Shunsaku Horiuchi is supported by NSF Grants No.~AST-1908960 and No.~PHY-1914409
 
 \chapter{Conclusions} \label{ch:summary}
 
-Dark matter remains one of the biggest mystery of modern physics. In this dissertation, we have studied the high-energy emission of millisecond pulsars, which plays an important rule for the dark matter indirect detection. 
+This dissertation has studied the gamma-ray emission of Galactic millisecond pulsars, which plays an essential role in the indirect detection of dark matter. 
 
-In Chapter~\ref{ch:GCE}, we discuss the Galactic center excess (GCE) detected by the \textit{Fermi} Large Area Telescope. The GCE is consistent with the annihilation of WIMP dark matter, one of the most motivated dark matter model. However, a population of unresolved millisecond pulsars in the Galactic bulge may also explain the signals. To confirm the origin of the GCE, further study of millisecond pulsar signals is needed.
+In Chapter~\ref{ch:GCE}, we discuss the Galactic center excess (GCE) detected by the \textit{Fermi} Large Area Telescope. The GCE is consistent with the annihilation of WIMP dark matter, one of the most motivated dark matter models. However, a population of unresolved millisecond pulsars in the Galactic bulge may also explain the signals. Further study for different prospective of the gamma-ray emission from millisecond pulsars is essential to confirm the origin of the GCE.
 
-In Chapter~\ref{ch:IC_MSPs}, we study the inverse Compton signal from the millisecond pulsars in the Galactic bulge, which would be a unique high-energy counterpart of the GCE. We found that the IC component above $\sim$TeV energies carries information on the spatial morphology of the injected $e^\pm$. Such salient recognizable features could be used by future high-energy gamma-ray detectors to confirm the millisecond pulsar origin of the GCE. In Chapter~\ref{ch:CTA}, we have explored the Cherenkov Telescope Array (CTA) sensitivity to the inverse Compton signals discussed in Chapter~\ref{ch:IC_MSPs}. We showed that CTA has the potential to robustly discover the inverse Compton signature of a putative
-Galactic bulge MSP population responsible for the GCE for $e^\pm$ injection efficiencies in the range $\approx 2.9 - 74.1\%$. In the event that an inverse Compton signal were detected, CTA can successfully discriminate between an MSP and a dark matter origin for the radiating $e^\pm$.
 
-In Chapter~\ref{ch:globular_cluster}, we have analyzed \textit{Fermi} data from the directions of Milky Way globular clusters. We found that the measured globular cluster gamma-ray luminosites mildly correlate with their photon field energy densities, indicating an inverse Compton contribution. We further uncovered a power-law component with a power index of $2.79 \pm 0.25$ in the spectra of the gamma-ray emitting globular clusters, which is most naturally interpreted as inverse Compton emission caused by the $e^\pm$ injected by millisecond pulsars.
+In Chapter~\ref{ch:IC_MSPs}, we study the inverse Compton signal from the millisecond pulsars in the Galactic bulge, which would be a unique high-energy counterpart of the GCE. We found that the IC component above $\sim$TeV energies carries information on the spatial morphology of the injected $e^\pm$. Future high-energy gamma-ray detectors could use such salient recognizable features to confirm the millisecond pulsar origin of the GCE. In Chapter~\ref{ch:CTA}, we have explored the Cherenkov Telescope Array (CTA) sensitivity to the inverse Compton signals discussed in Chapter~\ref{ch:IC_MSPs}. We showed that CTA has the potential to robustly discover the inverse Compton signature of a putative
+Galactic bulge MSP population responsible for the GCE for $e^\pm$ injection efficiencies in the range $\approx 2.9 - 74.1\%$. If an inverse Compton signal were detected, CTA can successfully discriminate between an MSP and a dark matter origin for the radiating $e^\pm$.
 
-In Chapter~\ref{ch:511keV}, we have re-analyzed the gamma-ray data of INTEGRAL/SPI to investigate the morphology of the Galactic 511 keV signal. We revealed that the signal traces old stellar distribution of the boxy bulge and nuclear stellar bulge, a feature that is similar to the GCE. Using a 3D smoothing kernel, we found that the signal is smeared out over a characteristic length scale of 150 $\pm$ 50 pc. We explored possible explanations to the smearing scale, including the supernova kicks and the positron propagation. We found that positron propagation prior to annihilation can explain the overall phenomenology of the 511 keV signal for positrons injection energies $\lesssim$1.4 MeV.
+In Chapter~\ref{ch:globular_cluster}, we have analyzed \textit{Fermi} data from the directions of Milky Way globular clusters. We found that the measured globular cluster gamma-ray luminosities mildly correlate with their photon field energy densities, indicating an inverse Compton contribution. We further uncovered a power-law component with a power index of $2.79 \pm 0.25$ in the spectra of the gamma-ray emitting globular clusters, which is most naturally interpreted as inverse Compton emission caused by the $e^\pm$ injected by millisecond pulsars.
 
-Our discoveries set the stage for many future observations. We have shown in Chapter~\ref{ch:CTA} that CTA has the potential to unravel the origin of the GCE by detecting the inverse Compton signal from millisecond pulsars. The TeV emission of globular clusters (as discussed in Chapter~\ref{ch:globular_cluster}) may also be detected by CTA and LHASSO in a near future, which will enable us understand the high-energy signals from millisecond pulsars. The morphological study we did in Chapter~\ref{ch:511keV} for the Galactic 511 keV signal could be followed by next generation gamma-ray telescopes like the e-Astrogam and AMEGO, since they will dramatically improve the sensitivity and angular resolutions in the MeV energy range.
+In Chapter~\ref{ch:511keV}, we have re-analyzed the gamma-ray data of INTEGRAL/SPI to investigate the morphology of the Galactic 511 keV signal. We revealed that the signal traces the old stellar distribution of the boxy bulge and nuclear bulge, a feature that is similar to the GCE. Using a 3D smoothing kernel, we found that the signal is smeared out over a characteristic length scale of 150 $\pm$ 50 pc. We explored possible explanations to the smearing scale, including the supernova kicks and the positron propagation. We found that positron propagation prior to annihilation can explain the overall phenomenology of the 511 keV signal for positrons injection energies $\lesssim$1.4 MeV.
 
+Our discoveries set the stage for many future observations. We have shown in Chapter~\ref{ch:CTA} that CTA has the potential to unravel the origin of the GCE by detecting the inverse Compton signal from millisecond pulsars. The TeV emission of globular clusters (as discussed in Chapter~\ref{ch:globular_cluster}) may also be detected by CTA~\cite{2019scta.book.....C} and LHASSO~\cite{2019arXiv190502773B} in the near future, which will enable us to understand the very high-energy signals from millisecond pulsars. The morphological study we did in Chapter~\ref{ch:511keV} for the Galactic 511 keV signal could be followed by next-generation gamma-ray telescopes like the e-Astrogam~\cite{2017ExA....44...25D} and AMEGO~\cite{2019BAAS...51g.245M} since they will dramatically improve the sensitivity and angular resolutions in the MeV energy range.
 
 
 
@@ -3361,6 +3376,10 @@ Our discoveries set the stage for many future observations. We have shown in Cha
 
 % Add your appendices here. You must leave the appendices enclosed in the appendices environment in order for the table of contents to be correct.
 \begin{appendices}
+
+\chapter{Inverse Compton energy loss and spectrum}\label{app:IC}
+
+The inverse Compton scattering
 
 \chapter{Globular cluster parameters and spectra} \label{app:glbcs}
   
